<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosybrown"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/pale_yellow"
        android:orientation="vertical" >

        <!-- Header -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="New/Modify Task"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1" >

            <TableRow
                android:paddingBottom="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:gravity="center"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dip"
                    android:text="@string/activity_modify_task_TextView_task_title_String_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_modify_task_Edittext_task_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:gravity="left"
                    android:hint="@string/activity_modify_task_EditText_task_title_String_hint"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip" />
            </TableRow>

            <TableRow android:paddingTop="20dp" >

                <TextView
                    android:gravity="center"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dip"
                    android:text="@string/activity_modify_task_TextView_due_date_String_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/activity_modify_task_Datepicker_due_date"
                    android:calendarViewShown="false"
                    android:gravity="center" />
            </TableRow>

            <TableRow android:paddingBottom="20dp" >

                <TextView
                    android:gravity="center"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dip"
                    android:text="@string/activity_modify_task_TextView_note_String_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_modify_task_EditText_note"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:gravity="left|bottom"
                    android:hint="@string/activity_modify_task_EditText_note_String_hint"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:paddingBottom="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:gravity="center"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:text="@string/activity_modify_task_Textview_priority_level_String_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/activity_modify_task_Spinner_priority_level"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:entries="@array/activity_modify_task_Spinner_priority_level_Stringarray_values"
                    android:gravity="left"
                    android:paddingBottom="10dip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>