<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".Events" >

    <!-- Date range selector -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:orientation="vertical" >

        <!-- From/To date pickers, labels, and submission button -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/date_label_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="30dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dip"
                    android:text="@string/from_date_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/to_date_label"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- From/To date pickers -->

            <LinearLayout
                android:id="@+id/date_picker_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dip"
                android:orientation="vertical" >

                <!-- NOTE: Programmatically set this to be the current day -->

                <Button
                    android:id="@+id/from_date_picker"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:gravity="center_vertical|left"
                    android:onClick="showFromDatePicker"
                    android:paddingLeft="15dp"
                    android:paddingRight="40dp" />

                <!-- NOTE: Programmatically set this to be a week from the current day -->

                <Button
                    android:id="@+id/to_date_picker"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|left"
                    android:onClick="showToDatePicker"
                    android:paddingLeft="15dp"
                    android:paddingRight="40dp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Submission and Shortcut buttons: today and this month -->

        <LinearLayout
            android:id="@+id/event_shortcuts_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/event_shortcut_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/event_shortcut_button"
                android:onClick="todayOnClick"
                android:text="@string/event_shortcut_today" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@color/black" />


            <Button
                android:id="@+id/submission_buton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/get_events_button"
                android:onClick="getEventsOnClick"
                android:text="@string/get_events"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <Button
                android:id="@+id/event_shortcut_this_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/event_shortcut_button"
                android:onClick="thisMonthOnClick"
                android:text="@string/event_shortcut_this_month" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>