<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosybrown"
    tools:context=".About" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Title banner -->

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/parrish_header"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/slategray"
            android:textSize="50sp" />

        <!-- About the app -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingBottom="2dp"
                android:text="@string/about_the_app"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_the_app"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gainsboro"
                android:orientation="horizontal"
                android:padding="10dp"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- About Zach -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingBottom="2dp"
                android:text="@string/about_zach"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_zach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gainsboro"
                android:orientation="horizontal"
                android:padding="10dp"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- About Sid -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingBottom="2dp"
                android:text="@string/about_sid"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_sid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gainsboro"
                android:orientation="horizontal"
                android:padding="10dp"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>